--- a/templates/style.css
+++ b/templates/style.css
@@ -54,7 +54,6 @@ a img
 {
 	box-shadow: 1px 0px 5px rgba(0,0,0,0.3);
 	position:fixed;
-	
 	z-index:200;
 	float:left;
 	border:2px solid {/literal}{$styleColor}{literal};
@@ -62,13 +61,13 @@ a img
 	width:400px;
 	height:200px;
 	background: #ddd;
-background: -moz-linear-gradient(left, #ddd 0%, #bbb 24%, #bbb 77%, #ddd 100%);
-background: -webkit-gradient(linear, left top, right top, color-stop(0%,#ddd), color-stop(24%,#bbb), color-stop(77%,#bbb), color-stop(100%,#ddd));
-background: -webkit-linear-gradient(left, #ddd 0%,#bbb 24%,#bbb 77%,#ddd 100%);
-background: -o-linear-gradient(left, #ddd 0%,#bbb 24%,#bbb 77%,#ddd 100%);
-background: -ms-linear-gradient(left, #ddd 0%,#bbb 24%,#bbb 77%,#ddd 100%);
-background: linear-gradient(to right, #ddd 0%,#bbb 24%,#bbb 77%,#ddd 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ddd', endColorstr='#ddd',GradientType=1 );
+	background: -moz-linear-gradient(left, #ddd 0%, #bbb 24%, #bbb 77%, #ddd 100%);
+	background: -webkit-gradient(linear, left top, right top, color-stop(0%,#ddd), color-stop(24%,#bbb), color-stop(77%,#bbb), color-stop(100%,#ddd));
+	background: -webkit-linear-gradient(left, #ddd 0%,#bbb 24%,#bbb 77%,#ddd 100%);
+	background: -o-linear-gradient(left, #ddd 0%,#bbb 24%,#bbb 77%,#ddd 100%);
+	background: -ms-linear-gradient(left, #ddd 0%,#bbb 24%,#bbb 77%,#ddd 100%);
+	background: linear-gradient(to right, #ddd 0%,#bbb 24%,#bbb 77%,#ddd 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ddd', endColorstr='#ddd',GradientType=1 );
 	min-height:100px;
 }
 .chatContainer.active
@@ -123,7 +122,7 @@ span.mailIcon
 .messageContainer
 {
 	clear:both;	
-	padding:4px; 
+	padding:4px;
 	overflow-y:scroll;
 	height:125px;
 	position:relative;
@@ -136,8 +135,12 @@ span.mailIcon
 	margin:5px;
 	box-shadow:0px 1px 10px rgba(0,0,0,0.4);
 	border-radius:5px;
+	max-width:80%;
 }
-
+.messageContainer .message:last-child
+{
+	margin-bottom:20px;
+}
 .message.me
 {
 	margin-left:70px;
@@ -579,17 +582,17 @@ form input.submit
 
 .chatUsername
 {
-	top:-10px;
+	top:-5px;
 	position:absolute;
-	width:70px;
+	width:60px;
 	font-size:9pt;
 	font-weight:bold;
 	color:{/literal}{$styleColor}{literal};
 	text-shadow: 0px 0px 2px rgba(255,255,255,0.2),1px 1px 3px rgba(0,0,0,0.2);
+	text-align:center;
 }
 .chatUsername span
 {
-	
 }
 .chatUsername.me
 {
@@ -598,7 +601,16 @@ form input.submit
 .chatUsername.you
 {
 	right:-70px;
-	text-align:right;
+}
+.chatUsername img
+{
+	box-shadow:0 1px 5px rgba(0,0,0,0.5);
+	margin-top:3px;
+	height:24px;
+	border-radius:3px;
+	border-width:1px;
+	border-style: solid;
+	border-color: #ddd #666 #555 #ccc;
 }
 .chatTimestamp
 {
@@ -620,7 +632,7 @@ form input.submit
 }
 .contentWrapperContainer
 {	
-	margin-top:60px;
+	margin-top:70px;
 	margin-left:5px;
 	z-index:1;	
 	margin-right:270px;
@@ -1053,7 +1065,7 @@ a.like.fix, a.like.active:hover
 }
 .votingBar.left.deac
 {
-	background-color:#ccc;
+	background-color:#ccc!important;
 }
 
 .votingBar.right
@@ -1307,7 +1319,7 @@ a.addPost
 	background: url(static/img/post.png) no-repeat left #fff;
 	/*border: 2px solid #aaa;*/
 	border-radius:5px;
-	box-shadow:0 1px 4px rgba(0,0,0,0.3);
+	box-shadow:0 1px 7px rgba(0,0,0,0.4);
 }
 a.addPost.poll
 {
@@ -1587,7 +1599,10 @@ div.slogan
 {
 	position:relative;
 	float:left;
-	width:250px;
+	width:260px;
+	height:35px;
+	overflow-x:hidden;
+	overflow-y:auto;
 	padding:5px 20px 4px;
 	border:2px solid;
 	border-color: rgba(255,255,255,0.3) rgba(255,255,255,0.1) rgba(255,255,255,0.1) rgba(255,255,255,0.2);
@@ -1599,8 +1614,6 @@ div.slogan
 	font-size:8pt;
 	line-height:16px;
 	text-align:center;
-	letter-spacing: 1px;
-	/*font-style:italic;*/
 	font-family:georgia,times new roman,serif;
 	text-shadow:1px 1px 1px rgba(0,0,0,0.3);
 	box-shadow:2px 2px 1px rgba(0,0,0,0.1),2px 2px 1px rgba(0,0,0,0.2) inset;
@@ -1827,16 +1840,34 @@ h1.tagline span.tagicon
 	width:24px;
 	height:24px;
 }
+.colorPickerDice
+{
+	position:absolute;
+	width:16px;
+	height:16px;
+	background:url(static/img/dice.png) no-repeat center;
+	right:-18px;
+	top:4px;cursor:pointer;  
+}
  #colorPickerInput
  {
 	 color:#fff!important;
-	 font-family:lucida console, monospace;
+	 font-family:consolas,monospace;
+	 font-weight:bold;
 	 text-shadow:0 1px 2px rgba(0,0,0,0.8);
 	 float:left;
-	 width:80px;
+	 width:70px;
 	 text-transform:uppercase;
 	 letter-spacing:0.6pt;
 	 text-align:center;
+	 border-radius:5px;
+	 border: 1px solid rgba(255,255,255,0.8);
+	 box-shadow:1px 1px 3px rgba(0,0,0,0.2),1px 1px 5px rgba(0,0,0,0.3) inset;
+	 padding:3px 3px 3px 16px;
+	 
+	 background-image:url(static/img/colorPicker.png);
+	 background-repeat:no-repeat;
+	 background-position:5px 2px;
  }
  #colorPicker
  {
@@ -1847,6 +1878,7 @@ h1.tagline span.tagicon
 	 background:rgba(0,0,0,0.8);
 	 border-radius:50%;
 	 box-shadow: 0 0 15px rgba(0,0,0,0.5);
+	 z-index:900;
  }
 h1.tagline span.tagged
 {
@@ -1885,5 +1917,10 @@ h1.tagline span.tagged
   overflow: hidden; 
   background: url(static/script/farbtastic/marker.png) no-repeat;
 }
+.contentContainer.postContainer
+{
 
+	border-radius: 0 0 5px 5px;
+	border-top:none!important;
+}
 {/literal}
