--- a/templates/style.css
+++ b/templates/style.css
@@ -577,6 +577,10 @@ form input.submit
 	outline:1px dotted #999;
 	background:#ccc
 }
+.chatMessage p
+{
+	margin:0;
+}
 .chatLink, .chatLink:link, .chatLink:visited
 {
 	clear:left;
@@ -916,6 +920,12 @@ float:left;
 {
 	background-color:{/literal}{$styleColor}{literal};
 }
+.postContainer .message h2,.postContainer .message h2:hover
+{
+	padding:0 0 4px 0;
+	cursor:default;
+	text-decoration:none;
+}
 .postContainer.active h2
 {
 	color:{/literal}{$styleColor}{literal};
@@ -978,36 +988,7 @@ float:left;
 {
 	display:block;
 }
-/*.videoInline
-{
-	float:left;
-	clear:left;
-	width:100%;
-	height:380px;	
-	margin-bottom:5px;
-	position:relative;
-}
 
-.videoInline iframe
-{
-	width:100%;
-	height:100%;
-	border:none;
-	background:#666 url(static/img/videoLoading.gif) center no-repeat;
-
-}
-
-.videoClose
-{
-	position:absolute;
-	width:16px;
-	height:16px;
-	background:url(static/img/white_buttons.gif) -16px 0 {/literal}{$styleColor}{literal};
-	top:-16px;
-	right:0;
-	cursor:pointer;
-	border-radius: 5px 5px 0 0;
-}*/
 .listFilterContainer
 {
 	margin-top:20px;
@@ -1199,11 +1180,16 @@ a.like.fix, a.like.active:hover
 
 .commentContainer
 {
-	clear:both;
 	display:block;
 	position:relative;
 	padding:3px;
 	font-family:"Georgia", "Times New Roman", serif;
+}
+.postContainer p
+{
+	margin:0;
+	padding:0 0 8px 0;
+	line-height:1.3em;
 }
 .commentContainerWrapper .commentContainer
 {
@@ -1228,6 +1214,7 @@ a.like.fix, a.like.active:hover
 .messageComment
 {
 	font-family:"Georgia", "Times New Roman", serif;
+	/*font-family:Lucida console,monospace;*/
 	clear:both;
 	float:none;
 	width:100%;
@@ -1257,6 +1244,11 @@ textarea.message
 	float:left;
 	clear:left;
 	height:40px;
+}
+textarea.disabled
+{
+	background:#eee;
+	color:#bbb;
 }
 .newPostForm
 {
@@ -1676,6 +1668,7 @@ div.slogan
 div.slogan *
 {
 	color:#fff;
+	padding:0;margin:0;
 }
 div.slogan div.postFooter
 {
@@ -1816,6 +1809,20 @@ div.graphContainer
 {
 	margin-left:10px;
 }
+code
+{
+	background:#fafafa;
+	color:#666;
+	border:1px solid #ccc;
+	border-radius:6px;
+	padding:4px 3px 1px;
+	font-family:Lucida console,monospace;
+}
+pre code
+{
+	display:block;
+	padding:4px 10px;
+}
 blockquote
 {
 	margin:5px;
@@ -1826,6 +1833,34 @@ blockquote
 	border:1px solid #aaa;
 	border-radius:5px;
 	color:#444;
+	clear:both;
+}
+.postContainer blockquote p 
+{
+	margin:0;padding:0;
+}
+.postContainer table
+{
+	margin:5px 0;
+	border-collapse:collapse;
+}
+.postContainer table th
+{
+	background:{/literal}{$styleColor}{literal};
+	color:#fff;
+	text-shadow:1px 1px 1px rgba(0,0,0,0.8);
+	padding:4px 10px 2px;
+	border-radius:5px 5px 0 0 ;
+}
+.postContainer table td
+{
+	border:1px solid #ddd;
+	padding:2px 5px;
+	text-align:center;
+}
+.postContainer ul
+{
+	margin:0 0 8px 0;
 }
 div.share
 {
@@ -2034,5 +2069,10 @@ background: url(static/script/farbtastic/marker.png) no-repeat;
 
 	border-radius: 0 0 5px 5px;
 	border-top:none!important;
+}
+label.disabled
+{
+	display:block;
+	color:#999;
 }
 {/literal}
